--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,62 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="theme-color" content="#ffffff" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Title & Meta -->
+    <title>Beauty by Viktoria | Facials, Cosmetic Tattooing & Beauty Services in Nelson</title>
+    <meta name="description" content="Beauty by Viktoria offers premium beauty treatments including facials, lash lifts, and semi-permanent makeup. Book your appointment today!">
+    <meta name="keywords" content="beauty by viktoria, viktorias house of beauty, cosmetic tattoo Richmond, facials Richmond, professional beauty services">
+
+    <!-- Open Graph Meta -->
+    <meta property="og:title" content="Beauty by Viktoria | Richmond, Nelson">
+    <meta property="og:description" content="Professional facials, massages, and cosmetic tattoos at Beauty by Viktoria in Richmond">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://beautybyviktoria.com">
+    <meta property="og:image" content="https://beautybyviktoria.com/favicon/favicon/favicon-96x96.png">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://beautybyviktoria.com" />
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon/favicon-96x96.png">
+    <link rel="manifest" href="%PUBLIC_URL%/favicon/favicon/site.webmanifest">
+    <link rel="mask-icon" href="%PUBLIC_URL%/favicon/favicon/favicon.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon/favicon.ico">
+
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- Schema.org JSON-LD for Local Business -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BeautySalon",
+      "name": "Beauty by Viktoria",
+      "image": "https://beautybyviktoria.com/static/media/beautylogo.png",
+      "@id": "https://beautybyviktoria.com",
+      "url": "https://beautybyviktoria.com",
+      "telephone": "+6421881498",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "169 white rd",
+        "addressLocality": "Hope",
+        "addressRegion": "Nelson",
+        "postalCode": "7020",
+        "addressCountry": "NZ"
+      }
+    }
+    </script>
   </head>
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      <strong>You need to enable JavaScript to experience Beauty by Viktoria website.</strong>
+      <p>Contact us directly at: <a href="tel:+6421881498">(+64) 021 881 498</a></p>
+    </noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
