Made visual changes to the home page and gallery

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+
     <!-- Title & Meta -->
     <title>Beauty by Viktoria | Facials, Cosmetic Tattooing & Beauty Services in Nelson</title>
     <meta name="description" content="Beauty by Viktoria offers premium beauty treatments including facials, lash lifts, and semi-permanent makeup. Book your appointment today!">
